# elastic-otel-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md  conftest.py  dev-requirements.txt  noxfile.py  opamp-gen-requirements.txt  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: Bug_report.md
.github/actions/env-install/: action.yml
.github/workflows/: ci.yml  release.yml
docs/: configure.md  docset.yml  get-started.md  manual-instrumentation.md  migrate-from-apm.md  supported-technologies.md  troubleshooting.md
docs/reference/: configuration.md  index.md  migration.md  supported-technologies.md  toc.yml
docs/reference/edot-python/: configuration.md  index.md  migration.md  overhead.md  supported-technologies.md  toc.yml
docs/reference/edot-python/setup/: index.md  k8s.md  manual-instrumentation.md
docs/reference/setup/: index.md  k8s.md  manual-instrumentation.md
docs/release-notes/: breaking-changes.md  deprecations.md  index.md  known-issues.md
examples/aiohttp/: Dockerfile  README.md  app.py
examples/fastapi/: Dockerfile  README.md  app.py
examples/flask/: Dockerfile  README.md  app.py
examples/openai/: README.md  chat.py  embeddings.py  env.example  pytest.ini  requirements.txt  test_evals.py
operator/: Dockerfile  Dockerfile.alpine  README.md  requirements.txt
scripts/: build_edot_bootstrap_instrumentations.py  license_headers_check.sh  opamp_proto_codegen.sh
src/elastic_opentelemetry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/elasticotel/distro/: __init__.py  config.py  environment_variables.py  resource_detectors.py  sanitization.py  version.py
src/elasticotel/instrumentation/: bootstrap.py
src/elasticotel/opamp/: __init__.py  agent.py  client.py  environment_variables.py  exceptions.py  messages.py  uuidv7.py
src/elasticotel/opamp/proto/: opamp_pb2.py
src/elasticotel/opamp/transport/: base.py  requests.py
src/elasticotel/sdk/resources/: __init__.py
src/elasticotel/sdk/sampler/: __init__.py
src/elasticotel/sdk/trace/: tracer_configurator.py
src/opentelemetry/_opamp/: README.md  agent.py  client.py  exceptions.py  messages.py  version.py
src/opentelemetry/_opamp/transport/: base.py  exceptions.py  requests.py
src/opentelemetry/sdk/_events/: __init__.py
tests/distro/: test_distro.py  test_resource_detectors.py  test_sanitization.py
tests/instrumentation/: test_bootstrap.py
tests/integration/: test_integration.py  utils.py
tests/opamp/: README.md  conftest.py  test_agent.py  test_client.py  test_e2e.py
tests/opamp/cassettes/: test_agent_send_full_state_when_asked.yaml  test_connection_remote_config_status_heartbeat_disconnection.yaml  test_default_callbacks.yaml  test_e2e.yaml  test_with_server_not_responding.yaml
tests/opamp/transport/: test_requests.py
tests/resources/: test_resources.py
