[project]
name = "elastic-opentelemetry"
dynamic = ["version"]
authors = [
    {name = "Riccardo Magliocchetti", email = "riccardo.magliocchetti@elastic.co"},
]
maintainers = [
    {name = "Riccardo Magliocchetti", email = "riccardo.magliocchetti@elastic.co"},
]
description = "Elastic Distribution of OpenTelemetry Python"
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Framework :: OpenTelemetry",
  "Framework :: OpenTelemetry :: Distros",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

dependencies = [
    "opentelemetry-api == 1.36.0",
    "opentelemetry-exporter-otlp == 1.36.0",
    "opentelemetry-instrumentation == 0.57b0",
    "opentelemetry-instrumentation-system-metrics == 0.57b0",
    "opentelemetry-resourcedetector-gcp ~= 1.8.0a0",
    "opentelemetry-resource-detector-azure ~= 0.1.5",
    "opentelemetry-resource-detector-containerid == 0.57b0",
    "opentelemetry-sdk == 1.36.0",
    "opentelemetry-sdk-extension-aws ~= 2.1.0",
    "opentelemetry-semantic-conventions == 0.57b0",
    "packaging",
    "uuid-utils",
]

[project.optional-dependencies]
dev = ["pytest", "pip-tools", "oteltest==0.24.0", "leb128", "pytest-vcr ; python_version > '3.9'"]

[project.entry-points.opentelemetry_configurator]
configurator = "elasticotel.distro:ElasticOpenTelemetryConfigurator"

[project.entry-points.opentelemetry_distro]
distro = "elasticotel.distro:ElasticOpenTelemetryDistro"

[project.entry-points.opentelemetry_resource_detector]
process_runtime = "elasticotel.sdk.resources:ProcessRuntimeResourceDetector"
telemetry_distro = "elasticotel.sdk.resources:TelemetryDistroResourceDetector"
service_instance = "elasticotel.sdk.resources:ServiceInstanceResourceDetector"
_gcp = "opentelemetry.resourcedetector.gcp_resource_detector._detector:GoogleCloudResourceDetector"

[project.scripts]
edot-bootstrap = "elasticotel.instrumentation.bootstrap:run"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/elastic/elastic-otel-python"
"Bug Tracker" = "https://github.com/elastic/elastic-otel-python/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "elasticotel.distro.version.__version__"}

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py38"
line-length = 120
extend-exclude = [
  "*_pb2*.py*",
]

[tool.ruff.lint.isort]
known-third-party = [
  "opentelemetry",
]
known-first-party = ["elasticotel"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.9"

include = [
  "src/elasticotel",
  "src/opentelemetry",
]

exclude = [
  "**/__pycache__",
  "src/opentelemetry/_opamp/proto",
]
